# pscalib

./: .gitignore  README.md  pyproject.toml  run_tests.sh
src/pscalib/: __init__.py  _purity.py  geometry.py  image.py  model.py  registry.py  render.py
src/pscalib/_geometry/: GeometryAccess.py  GeometryObject.py  SegGeometry.py  SegGeometryEpix10kaV1.py  SegGeometryJungfrauV1.py  SegGeometryJungfrauV2.py  SegGeometryStore.py  __init__.py
src/pscalib/apply/: __init__.py  epix10ka.py  jungfrau.py
src/pscalib/providers/: __init__.py  snapshot.py  webdb.py
tests/: conftest.py  test_api_us005.py  test_calib_us000.py  test_epix10ka_trbit_us008.py  test_epix10ka_us004.py  test_geometry_us006.py  test_no_drift_us000.py  test_purity_us007.py  test_validity_us002.py  test_webdb_us001.py
